--- a/app.json
+++ b/app.json
@@ -34,6 +34,10 @@
   ],
   "buildpacks": [{
     "url": "heroku/python"
+  }, {
+    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+  }, {
+    "url": "https://github.com/opendoor-labs/heroku-buildpack-p7zip"
   }],
   "formation": {
     "worker": {
